Compute accessibility score for StreetLegs